Framework improvements: app-dirs API, stateful menus, WebView2 auto-locate, ConPTY probe
Turns the limitations found while building jdesk-notes into real framework features,
verified on Windows 11 (unit tests cross-platform; native paths runtime-driven).

Framework (public API + all three platforms):
- ApplicationHandle.dataDir()/configDir()/cacheDir(): OS-standard per-app directories
  (Windows %APPDATA%/%LOCALAPPDATA%, macOS Library, Linux XDG), created on first access,
  overridable with -Djdesk.paths.dir. New AppPaths + AppPathsTest (8 cases, all OS layouts).
- MenuItem.Action gains checked/enabled (MenuItem.check(...)); TrayHandle.setMenu / SPI
  TrayControl.setMenu to update a tray's menu. Windows AppendMenuW MF_CHECKED/MF_GRAYED +
  rebuildable tray menu; macOS setState:/setEnabled: + NSStatusItem setMenu:; Linux
  gtk_check_menu_item_* + gtk_widget_set_sensitive + ref-swapped tray menu.
- WebView2Environment auto-locates WebView2Loader.dll (next to the exe / app dir / cwd)
  before the bare-name fallback, so a packaged app needs no loader flag.
- Docs: /evaluate runs in an isolated world (reads only); use /input to interact.

jdesk-notes example (uses the new APIs):
- Session store moved to the platform data dir (Paths API).
- Single-instance: a second launch focuses the window and opens a file arg in a tab.
- Drag-and-drop via WindowHandle.onFileDrop; recent-files list; clean non-UTF-8 message.
- Tray "Start with Windows" is now a checkmark updated via setMenu.

WindowsPtyProbe: first runtime exercise of the ConPTY backend. PASS on the lifecycle path
(child runs, exit code=7 propagates, resize, kill) — which also validates the earlier
process-handle double-close fix. Runtime testing honestly surfaced two ConPTY limitations
(documented, not silently passed): async output rendering is timing-dependent, and an
interactive cmd.exe receives stdin EOF and exits before a write reaches it.

Verified on Windows 11 (WebView2 150.0.4078.65): check green (all modules, 